# opc

./: Cargo.toml  README.md
resources/files/: e1.xlsx
src/: lib.rs
src/document/: sheet.rs
src/document/sheet/: cell.rs  document_type.rs  mod.rs  shared_string.rs  style.rs  workbook.rs  worksheet.rs
src/packaging/: app_property.rs  content_type.rs  custom_property.rs  element.rs  mod.rs  namespace.rs  package.rs  property.rs  variant.rs
src/packaging/part/: mod.rs
src/packaging/relationship/: mod.rs
tests/: open.rs
