[package]
name = "opc"
version = "0.1.0"
authors = ["shun-sfoo <ganymede0915@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
thiserror = "1"
quick-xml = { version = "0.20.0", features = ["serialize"] }
zip = "0.5.8"
url = "2.1.1"
log = "0.4.11"
regex = "1"
chrono = { version = "0.4.19", features = ["serde"] }
snailquote = "0.3.0"
[dev-dependencies]
itertools = "0.9.0"
